--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@prisma/client": "^6.18.0",
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
-    "next": "15.5.4",
+    "next": "^16.1.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "socket.io-client": "^4.8.1",
